# Routes/UserRoutes.js
@@ -9,10 +9,11 @@ router.post('/login', Middlewares.Validate(loginSchema), Controllers.UserControl
 router.use(Middlewares.Authorize(DATABASE.USER_TYPES.USER));
 router.post('/createCollection', Middlewares.Validate(createCollectionSchema), Controllers.UserController.createCollection);
 router.get('/getCollections', Controllers.UserController.getCollections);
-router.post('/addLayer/:collectionId', Middlewares.Validate(addLayerSchema), Controllers.UserController.addLayer);
+router.delete('/collection/:collectionId', Middlewares.Validate(getLayersSchema), Controllers.UserController.deleteCollection);
+router.post('/addLayer', Middlewares.Validate(addLayerSchema), Controllers.UserController.addLayer);
 router.get('/getLayers/:collectionId', Middlewares.Validate(getLayersSchema), Controllers.UserController.getLayers);
 router.post('/uploadImages/:layerId', Middlewares.Validate(uploadImagesSchema), Middlewares.UploadFiles, Controllers.UserController.uploadImages);
 router.get('/getImages/:layerId', Middlewares.Validate(getImagesSchema), Controllers.UserController.getImages);
-router.post('/generateNFT/:collectionId', Middlewares.Validate(generateNFTSchema), Controllers.UserController.generateNfts);
+router.post('/generateNFT', Middlewares.Validate(generateNFTSchema), Controllers.UserController.generateNfts);
 
 module.exports = router;
